# backend

./: .env-example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  build.rs  justfile
.github/workflows/: build.yml
contracts/: Gitbounties.sol  GitbountiesNFT.sol
crates/gitbounties_backend/: Cargo.toml
crates/gitbounties_backend/src/: contract.rs  db.rs  main.rs  middleware.rs  models.rs  utils.rs
crates/gitbounties_backend/src/api/: auth.rs  bounty.rs  github.rs  issue.rs
crates/gitbounties_backend/src/api/github/: mod.rs
crates/gitbounties_contract/: Cargo.toml
crates/gitbounties_contract/contract/: GitbountiesNFT.json
crates/gitbounties_contract/src/: lib.rs
dev/scripts/: certs  docker-publish  docker-push.sh
src/: contract.rs  db.rs  ether.rs  main.rs  models.rs  session_auth.rs  utils.rs
src/api/: auth.rs  bounty.rs  github.rs  issue.rs  mod.rs
