[package]
name = "gitbounties_backend"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = ""
repository = ""
build = "build.rs"

[features]

[dependencies]
axum = { version = "0.6", features = ["query"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
surrealdb = { version = "1.0.0-beta.9" }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
ethers = { version = "2.0", default-features = false, features = ["ethers-solc"] }
jsonwebtoken = { version = "8" }

dotenvy = { version = "0.15" }

anyhow = { version = "1" }
env_logger = { version = "0.9" }
log = { version = "0.4" }

[build-dependencies]
ethers = { version = "2.0", default-features = false, features = ["ethers-solc"] }
serde_json = { version = "1.0" }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
