[package]
name = "gitbounties_contract"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = ""
repository = "https://github.com/gitbounties/backend"

[dependencies]
ethers = { version = "2.0", default-features = false, features = ["ethers-solc"] }

